@@ -1,3 +1,7 @@
+2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j86-UNSTABLE
+
+ * UPS: forget to add rebuild_thumbs.php into SVN with b1-j72.
+
 2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j85-UNSTABLE
 
  * NEW: Added Browser.php class from the HORDE (http://www.horde.org) framework.
